--- a/bridges/modules/message-lane/Cargo.toml
+++ b/bridges/modules/message-lane/Cargo.toml
@@ -19,17 +19,17 @@ bp-runtime = { path = "../../primitives/runtime", default-features = false }
 
 # Substrate Dependencies
 
-frame-benchmarking = { git = "https://github.com/paritytech/substrate.git", branch = "master" , default-features = false, optional = true }
-frame-support = { git = "https://github.com/paritytech/substrate.git", branch = "master" , default-features = false }
-frame-system = { git = "https://github.com/paritytech/substrate.git", branch = "master" , default-features = false }
-sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "master" , default-features = false }
-sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "master" , default-features = false }
-sp-std = { git = "https://github.com/paritytech/substrate.git", branch = "master" , default-features = false }
+frame-benchmarking = { git = "https://github.com/paritytech/substrate.git", default-features = false, optional = true , branch = "state-trace-rpc" }
+frame-support = { git = "https://github.com/paritytech/substrate.git", default-features = false , branch = "state-trace-rpc" }
+frame-system = { git = "https://github.com/paritytech/substrate.git", default-features = false , branch = "state-trace-rpc" }
+sp-core = { git = "https://github.com/paritytech/substrate.git", default-features = false , branch = "state-trace-rpc" }
+sp-runtime = { git = "https://github.com/paritytech/substrate.git", default-features = false , branch = "state-trace-rpc" }
+sp-std = { git = "https://github.com/paritytech/substrate.git", default-features = false , branch = "state-trace-rpc" }
 
 [dev-dependencies]
 hex-literal = "0.3"
-sp-io = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
-pallet-balances = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
+sp-io = { git = "https://github.com/paritytech/substrate.git", branch = "state-trace-rpc" }
+pallet-balances = { git = "https://github.com/paritytech/substrate.git", branch = "state-trace-rpc" }
 
 [features]
 default = ["std"]
