--- a/bridges/primitives/ethereum-poa/Cargo.toml
+++ b/bridges/primitives/ethereum-poa/Cargo.toml
@@ -24,10 +24,10 @@ triehash = { version = "0.8.2", default-features = false }
 
 # Substrate Dependencies
 
-sp-api = { git = "https://github.com/paritytech/substrate.git", branch = "master" , default-features = false }
-sp-io = { git = "https://github.com/paritytech/substrate.git", branch = "master" , default-features = false }
-sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "master" , default-features = false }
-sp-std = { git = "https://github.com/paritytech/substrate.git", branch = "master" , default-features = false }
+sp-api = { git = "https://github.com/paritytech/substrate.git", default-features = false , branch = "state-trace-rpc" }
+sp-io = { git = "https://github.com/paritytech/substrate.git", default-features = false , branch = "state-trace-rpc" }
+sp-runtime = { git = "https://github.com/paritytech/substrate.git", default-features = false , branch = "state-trace-rpc" }
+sp-std = { git = "https://github.com/paritytech/substrate.git", default-features = false , branch = "state-trace-rpc" }
 
 [dev-dependencies]
 hex-literal = "0.2"
