--- a/node/network/approval-distribution/Cargo.toml
+++ b/node/network/approval-distribution/Cargo.toml
@@ -16,7 +16,7 @@ tracing = "0.1.22"
 tracing-futures = "0.2.4"
 
 [dev-dependencies]
-sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.29", features = ["std"] }
+sp-core = { git = "https://github.com/paritytech/substrate", features = ["std"] , branch = "zeke-add-traces-polkadot-v0.8.29" }
 
 polkadot-node-subsystem-util = { path = "../../subsystem-util" }
 polkadot-node-subsystem-test-helpers = { path = "../../subsystem-test-helpers" }
