--- a/node/test/service/Cargo.toml
+++ b/node/test/service/Cargo.toml
@@ -26,38 +26,38 @@ polkadot-test-runtime = { path = "../../../runtime/test-runtime" }
 polkadot-runtime-parachains = { path = "../../../runtime/parachains" }
 
 # Substrate dependencies
-sp-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.29" }
-sc-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.29" }
-babe = { package = "sc-consensus-babe", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.29" }
-babe-primitives = { package = "sp-consensus-babe", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.29" }
-consensus_common = { package = "sp-consensus", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.29" }
-frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.29" }
-frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.29" }
-grandpa = { package = "sc-finality-grandpa", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.29" }
-grandpa_primitives = { package = "sp-finality-grandpa", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.29" }
-inherents = { package = "sp-inherents", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.29" }
-pallet-staking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.29" }
-pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.29" }
-pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.29" }
-sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.29" }
-sc-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.29" }
-sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.29" }
-sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.29" }
-sc-executor = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.29" }
-sc-network = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.29" }
-sc-tracing = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.29" }
-sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.29" }
-service = { package = "sc-service", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.29", default-features = false }
-sp-arithmetic = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.29" }
-sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.29" }
-sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.29" }
-sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.29" }
-sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.29" }
-sp-state-machine = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.29" }
-substrate-test-client = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.29" }
+sp-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "zeke-add-traces-polkadot-v0.8.29" }
+sc-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "zeke-add-traces-polkadot-v0.8.29" }
+babe = { package = "sc-consensus-babe", git = "https://github.com/paritytech/substrate", branch = "zeke-add-traces-polkadot-v0.8.29" }
+babe-primitives = { package = "sp-consensus-babe", git = "https://github.com/paritytech/substrate", branch = "zeke-add-traces-polkadot-v0.8.29" }
+consensus_common = { package = "sp-consensus", git = "https://github.com/paritytech/substrate", branch = "zeke-add-traces-polkadot-v0.8.29" }
+frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "zeke-add-traces-polkadot-v0.8.29" }
+frame-system = { git = "https://github.com/paritytech/substrate", branch = "zeke-add-traces-polkadot-v0.8.29" }
+grandpa = { package = "sc-finality-grandpa", git = "https://github.com/paritytech/substrate", branch = "zeke-add-traces-polkadot-v0.8.29" }
+grandpa_primitives = { package = "sp-finality-grandpa", git = "https://github.com/paritytech/substrate", branch = "zeke-add-traces-polkadot-v0.8.29" }
+inherents = { package = "sp-inherents", git = "https://github.com/paritytech/substrate", branch = "zeke-add-traces-polkadot-v0.8.29" }
+pallet-staking = { git = "https://github.com/paritytech/substrate", branch = "zeke-add-traces-polkadot-v0.8.29" }
+pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "zeke-add-traces-polkadot-v0.8.29" }
+pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", branch = "zeke-add-traces-polkadot-v0.8.29" }
+sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "zeke-add-traces-polkadot-v0.8.29" }
+sc-cli = { git = "https://github.com/paritytech/substrate", branch = "zeke-add-traces-polkadot-v0.8.29" }
+sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "zeke-add-traces-polkadot-v0.8.29" }
+sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "zeke-add-traces-polkadot-v0.8.29" }
+sc-executor = { git = "https://github.com/paritytech/substrate", branch = "zeke-add-traces-polkadot-v0.8.29" }
+sc-network = { git = "https://github.com/paritytech/substrate", branch = "zeke-add-traces-polkadot-v0.8.29" }
+sc-tracing = { git = "https://github.com/paritytech/substrate", branch = "zeke-add-traces-polkadot-v0.8.29" }
+sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "zeke-add-traces-polkadot-v0.8.29" }
+service = { package = "sc-service", git = "https://github.com/paritytech/substrate", default-features = false , branch = "zeke-add-traces-polkadot-v0.8.29" }
+sp-arithmetic = { git = "https://github.com/paritytech/substrate", branch = "zeke-add-traces-polkadot-v0.8.29" }
+sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "zeke-add-traces-polkadot-v0.8.29" }
+sp-core = { git = "https://github.com/paritytech/substrate", branch = "zeke-add-traces-polkadot-v0.8.29" }
+sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "zeke-add-traces-polkadot-v0.8.29" }
+sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "zeke-add-traces-polkadot-v0.8.29" }
+sp-state-machine = { git = "https://github.com/paritytech/substrate", branch = "zeke-add-traces-polkadot-v0.8.29" }
+substrate-test-client = { git = "https://github.com/paritytech/substrate", branch = "zeke-add-traces-polkadot-v0.8.29" }
 
 [dev-dependencies]
-pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.29", default-features = false }
+pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "zeke-add-traces-polkadot-v0.8.29" }
 serde_json = "1.0.61"
-substrate-test-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.29" }
+substrate-test-utils = { git = "https://github.com/paritytech/substrate", branch = "zeke-add-traces-polkadot-v0.8.29" }
 tokio = { version = "0.2", features = ["macros"] }
