--- a/runtime/parachains/Cargo.toml
+++ b/runtime/parachains/Cargo.toml
@@ -12,27 +12,27 @@ rustc-hex = { version = "2.1.0", default-features = false }
 serde = { version = "1.0.123", features = [ "derive" ], optional = true }
 derive_more = "0.99.11"
 
-sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.29", default-features = false }
-inherents = { package = "sp-inherents", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.29", default-features = false }
-sp-std = { package = "sp-std", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.29", default-features = false }
-sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.29", default-features = false }
-sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.29", default-features = false }
-sp-session = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.29", default-features = false }
-sp-staking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.29", default-features = false }
-sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.29", default-features = false }
-sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.29", optional = true }
+sp-api = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "zeke-add-traces-polkadot-v0.8.29" }
+inherents = { package = "sp-inherents", git = "https://github.com/paritytech/substrate", default-features = false , branch = "zeke-add-traces-polkadot-v0.8.29" }
+sp-std = { package = "sp-std", git = "https://github.com/paritytech/substrate", default-features = false , branch = "zeke-add-traces-polkadot-v0.8.29" }
+sp-io = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "zeke-add-traces-polkadot-v0.8.29" }
+sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "zeke-add-traces-polkadot-v0.8.29" }
+sp-session = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "zeke-add-traces-polkadot-v0.8.29" }
+sp-staking = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "zeke-add-traces-polkadot-v0.8.29" }
+sp-core = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "zeke-add-traces-polkadot-v0.8.29" }
+sp-keystore = { git = "https://github.com/paritytech/substrate", optional = true , branch = "zeke-add-traces-polkadot-v0.8.29" }
 
-pallet-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.29", default-features = false }
-pallet-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.29", default-features = false }
-pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.29", default-features = false }
-pallet-session = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.29", default-features = false }
-frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.29", default-features = false }
-pallet-staking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.29", default-features = false }
-frame-system = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.29", default-features = false }
-pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.29", default-features = false }
-pallet-vesting = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.29", default-features = false }
-pallet-offences = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.29", default-features = false }
-frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.29", default-features = false, optional = true }
+pallet-authority-discovery = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "zeke-add-traces-polkadot-v0.8.29" }
+pallet-authorship = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "zeke-add-traces-polkadot-v0.8.29" }
+pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "zeke-add-traces-polkadot-v0.8.29" }
+pallet-session = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "zeke-add-traces-polkadot-v0.8.29" }
+frame-support = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "zeke-add-traces-polkadot-v0.8.29" }
+pallet-staking = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "zeke-add-traces-polkadot-v0.8.29" }
+frame-system = {git = "https://github.com/paritytech/substrate", default-features = false , branch = "zeke-add-traces-polkadot-v0.8.29" }
+pallet-timestamp = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "zeke-add-traces-polkadot-v0.8.29" }
+pallet-vesting = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "zeke-add-traces-polkadot-v0.8.29" }
+pallet-offences = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "zeke-add-traces-polkadot-v0.8.29" }
+frame-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true , branch = "zeke-add-traces-polkadot-v0.8.29" }
 
 xcm = { package = "xcm", path = "../../xcm", default-features = false }
 xcm-executor = { package = "xcm-executor", path = "../../xcm/xcm-executor", default-features = false }
@@ -45,17 +45,17 @@ rand_chacha = { version = "0.3.0", default-features = false }
 [dev-dependencies]
 futures = "0.3.12"
 hex-literal = "0.3.1"
-keyring = { package = "sp-keyring", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.29" }
-sp-trie = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.29" }
-pallet-babe = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.29" }
-sp-application-crypto = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.29" }
-pallet-randomness-collective-flip = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.29" }
-pallet-staking-reward-curve = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.29" }
-pallet-treasury = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.29" }
+keyring = { package = "sp-keyring", git = "https://github.com/paritytech/substrate", branch = "zeke-add-traces-polkadot-v0.8.29" }
+sp-trie = { git = "https://github.com/paritytech/substrate", branch = "zeke-add-traces-polkadot-v0.8.29" }
+pallet-babe = { git = "https://github.com/paritytech/substrate", branch = "zeke-add-traces-polkadot-v0.8.29" }
+sp-application-crypto = { git = "https://github.com/paritytech/substrate", branch = "zeke-add-traces-polkadot-v0.8.29" }
+pallet-randomness-collective-flip = { git = "https://github.com/paritytech/substrate", branch = "zeke-add-traces-polkadot-v0.8.29" }
+pallet-staking-reward-curve = { git = "https://github.com/paritytech/substrate", branch = "zeke-add-traces-polkadot-v0.8.29" }
+pallet-treasury = { git = "https://github.com/paritytech/substrate", branch = "zeke-add-traces-polkadot-v0.8.29" }
 serde_json = "1.0.61"
 libsecp256k1 = "0.3.5"
-sp-version = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.29", default-features = false }
-sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.29"}
+sp-version = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "zeke-add-traces-polkadot-v0.8.29" }
+sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "zeke-add-traces-polkadot-v0.8.29" }
 
 
 [features]
