--- a/xcm/xcm-builder/Cargo.toml
+++ b/xcm/xcm-builder/Cargo.toml
@@ -9,11 +9,11 @@ version = "0.8.22"
 parity-scale-codec = { version = "2.0.0", default-features = false, features = ["derive"] }
 xcm = { path = "..", default-features = false }
 xcm-executor = { path = "../xcm-executor", default-features = false }
-sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.29", default-features = false }
-sp-arithmetic = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.29", default-features = false }
-sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.29", default-features = false }
-sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.29", default-features = false }
-frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.8.29", default-features = false }
+sp-std = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "zeke-add-traces-polkadot-v0.8.29" }
+sp-arithmetic = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "zeke-add-traces-polkadot-v0.8.29" }
+sp-io = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "zeke-add-traces-polkadot-v0.8.29" }
+sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "zeke-add-traces-polkadot-v0.8.29" }
+frame-support = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "zeke-add-traces-polkadot-v0.8.29" }
 
 # Polkadot dependencies
 polkadot-parachain = { path = "../../parachain", default-features = false }
