--- a/bridges/modules/ethereum-contract/builtin/Cargo.toml
+++ b/bridges/modules/ethereum-contract/builtin/Cargo.toml
@@ -19,10 +19,10 @@ rialto-runtime = { path = "../../../bin/rialto/runtime" }
 
 # Substrate Dependencies
 
-sc-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "master" }
-sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "master" }
-sp-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "master" }
-sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "master" }
+sc-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
+sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
+sp-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
+sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
 
 [dev-dependencies]
-sp-core = { git = "https://github.com/paritytech/substrate", branch = "master" }
+sp-core = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
