--- a/bridges/primitives/polkadot/Cargo.toml
+++ b/bridges/primitives/polkadot/Cargo.toml
@@ -15,12 +15,12 @@ bp-runtime = { path = "../runtime", default-features = false }
 
 # Substrate Based Dependencies
 
-frame-support = { git = "https://github.com/paritytech/substrate", branch = "master" , default-features = false }
-frame-system = { git = "https://github.com/paritytech/substrate", branch = "master" , default-features = false }
-sp-api = { git = "https://github.com/paritytech/substrate", branch = "master" , default-features = false }
-sp-core = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
-sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
-sp-std = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
+frame-support = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "state-trace-rpc" }
+frame-system = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "state-trace-rpc" }
+sp-api = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "state-trace-rpc" }
+sp-core = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "state-trace-rpc" }
+sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "state-trace-rpc" }
+sp-std = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "state-trace-rpc" }
 
 [features]
 default = ["std"]
