--- a/bridges/relays/millau-client/Cargo.toml
+++ b/bridges/relays/millau-client/Cargo.toml
@@ -17,9 +17,9 @@ millau-runtime = { path = "../../bin/millau/runtime" }
 
 # Substrate Dependencies
 
-frame-support = { git = "https://github.com/paritytech/substrate", branch = "master" }
-frame-system = { git = "https://github.com/paritytech/substrate", branch = "master" }
-pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", branch = "master" }
-sp-core = { git = "https://github.com/paritytech/substrate", branch = "master" }
-sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "master" }
-sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "master" }
+frame-support = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
+frame-system = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
+pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
+sp-core = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
+sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
+sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
