--- a/bridges/relays/substrate-client/Cargo.toml
+++ b/bridges/relays/substrate-client/Cargo.toml
@@ -23,15 +23,15 @@ relay-utils = { path = "../utils" }
 
 # Substrate Dependencies
 
-frame-support = { git = "https://github.com/paritytech/substrate", branch = "master" }
-frame-system = { git = "https://github.com/paritytech/substrate", branch = "master" }
-pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "master" }
-sc-rpc-api = { git = "https://github.com/paritytech/substrate", branch = "master" }
-sp-core = { git = "https://github.com/paritytech/substrate", branch = "master" }
-sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "master" }
-sp-std = { git = "https://github.com/paritytech/substrate", branch = "master" }
-sp-trie = { git = "https://github.com/paritytech/substrate", branch = "master" }
-sp-version = { git = "https://github.com/paritytech/substrate", branch = "master" }
+frame-support = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
+frame-system = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
+pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
+sc-rpc-api = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
+sp-core = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
+sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
+sp-std = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
+sp-trie = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
+sp-version = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
 
 #[dev-dependencies]
 futures = "0.3.7"
