--- a/node/service/Cargo.toml
+++ b/node/service/Cargo.toml
@@ -6,56 +6,56 @@ edition = "2018"
 
 [dependencies]
 # Substrate Client
-sc-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "master" }
-babe = { package = "sc-consensus-babe", git = "https://github.com/paritytech/substrate", branch = "master" }
+sc-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
+babe = { package = "sc-consensus-babe", git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
 beefy-primitives = { git = "https://github.com/paritytech/grandpa-bridge-gadget", branch = "master" }
 beefy-gadget = { git = "https://github.com/paritytech/grandpa-bridge-gadget", branch = "master" }
-grandpa = { package = "sc-finality-grandpa", git = "https://github.com/paritytech/substrate", branch = "master" }
-sc-block-builder = { git = "https://github.com/paritytech/substrate", branch = "master" }
-sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "master" }
-sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "master" }
-sc-client-db = { git = "https://github.com/paritytech/substrate", branch = "master" }
-sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "master" }
-sc-consensus-slots = { git = "https://github.com/paritytech/substrate", branch = "master" }
-sc-executor = { git = "https://github.com/paritytech/substrate", branch = "master" }
-sc-finality-grandpa-warp-sync = { git = "https://github.com/paritytech/substrate", branch = "master", optional = true }
-sc-network = { git = "https://github.com/paritytech/substrate", branch = "master" }
-sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "master" }
-sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "master" }
-service = { package = "sc-service", git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
-telemetry = { package = "sc-telemetry", git = "https://github.com/paritytech/substrate", branch = "master" }
+grandpa = { package = "sc-finality-grandpa", git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
+sc-block-builder = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
+sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
+sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
+sc-client-db = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
+sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
+sc-consensus-slots = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
+sc-executor = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
+sc-finality-grandpa-warp-sync = { git = "https://github.com/paritytech/substrate", optional = true , branch = "state-trace-rpc" }
+sc-network = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
+sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
+sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
+service = { package = "sc-service", git = "https://github.com/paritytech/substrate", default-features = false , branch = "state-trace-rpc" }
+telemetry = { package = "sc-telemetry", git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
 
 # Substrate Primitives
-sp-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "master" }
-babe-primitives = { package = "sp-consensus-babe", git = "https://github.com/paritytech/substrate", branch = "master" }
-consensus_common = { package = "sp-consensus", git = "https://github.com/paritytech/substrate", branch = "master" }
-grandpa_primitives = { package = "sp-finality-grandpa", git = "https://github.com/paritytech/substrate", branch = "master" }
-inherents = { package = "sp-inherents", git = "https://github.com/paritytech/substrate", branch = "master" }
-sp-api = { git = "https://github.com/paritytech/substrate", branch = "master" }
-sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "master" }
-sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "master" }
-sp-core = { git = "https://github.com/paritytech/substrate", branch = "master" }
-sp-io = { git = "https://github.com/paritytech/substrate", branch = "master" }
-sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "master" }
-sp-offchain = { package = "sp-offchain", git = "https://github.com/paritytech/substrate", branch = "master" }
-sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "master" }
-sp-session = { git = "https://github.com/paritytech/substrate", branch = "master" }
-sp-storage = { git = "https://github.com/paritytech/substrate", branch = "master" }
-sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "master" }
-sp-trie = { git = "https://github.com/paritytech/substrate", branch = "master" }
-sp-state-machine = { git = "https://github.com/paritytech/substrate", branch = "master" }
+sp-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
+babe-primitives = { package = "sp-consensus-babe", git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
+consensus_common = { package = "sp-consensus", git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
+grandpa_primitives = { package = "sp-finality-grandpa", git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
+inherents = { package = "sp-inherents", git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
+sp-api = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
+sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
+sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
+sp-core = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
+sp-io = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
+sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
+sp-offchain = { package = "sp-offchain", git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
+sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
+sp-session = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
+sp-storage = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
+sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
+sp-trie = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
+sp-state-machine = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
 
 # Substrate Pallets
-pallet-babe = { git = "https://github.com/paritytech/substrate", branch = "master" }
-pallet-im-online = { git = "https://github.com/paritytech/substrate", branch = "master" }
-pallet-staking = { git = "https://github.com/paritytech/substrate", branch = "master" }
-pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "master" }
-pallet-mmr-primitives = { git = "https://github.com/paritytech/substrate", branch = "master" }
+pallet-babe = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
+pallet-im-online = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
+pallet-staking = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
+pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
+pallet-mmr-primitives = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
 
 # Substrate Other
-frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "master" }
-frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "master" }
-prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "https://github.com/paritytech/substrate", branch = "master" }
+frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
+frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
+prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
 
 # External Crates
 futures = "0.3.12"
