--- a/node/test/client/Cargo.toml
+++ b/node/test/client/Cargo.toml
@@ -14,20 +14,20 @@ polkadot-primitives = { path = "../../../primitives" }
 polkadot-node-subsystem = { path = "../../subsystem" }
 
 # Substrate dependencies
-substrate-test-client = { git = "https://github.com/paritytech/substrate", branch = "master" }
-sc-service = { git = "https://github.com/paritytech/substrate", branch = "master" }
-sc-block-builder = { git = "https://github.com/paritytech/substrate", branch = "master" }
-sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "master" }
-sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "master" }
-sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "master" }
-sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "master" }
-sp-core = { git = "https://github.com/paritytech/substrate", branch = "master" }
-sp-api = { git = "https://github.com/paritytech/substrate", branch = "master" }
-sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "master" }
-sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "master" }
-sp-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "master" }
-sp-state-machine = { git = "https://github.com/paritytech/substrate", branch = "master" }
+substrate-test-client = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
+sc-service = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
+sc-block-builder = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
+sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
+sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
+sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
+sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
+sp-core = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
+sp-api = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
+sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
+sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
+sp-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
+sp-state-machine = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
 
 [dev-dependencies]
-sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "master" }
+sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "state-trace-rpc" }
 futures = "0.3.12"
